logs/dag_id=movies-etl-dag/run_id=manual__2023-11-03T105700.555483+0000/task_id=get_films_data/attempt=1.log
[2023-11-03T10:57:07.086+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: movies-etl-dag.get_films_data manual__2023-11-03T10:57:00.555483+00:00 [queued]>
[2023-11-03T10:57:07.096+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: movies-etl-dag.get_films_data manual__2023-11-03T10:57:00.555483+00:00 [queued]>
[2023-11-03T10:57:07.096+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 1
[2023-11-03T10:57:07.116+0000] {taskinstance.py:1380} INFO - Executing <Task(PythonOperator): get_films_data> on 2023-11-03 10:57:00.555483+00:00
[2023-11-03T10:57:07.123+0000] {standard_task_runner.py:57} INFO - Started process 464 to run task
[2023-11-03T10:57:07.127+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'movies-etl-dag', 'get_films_data', 'manual__2023-11-03T10:57:00.555483+00:00', '--job-id', '33', '--raw', '--subdir', 'DAGS_FOLDER/movie_pg_es.py', '--cfg-path', '/tmp/tmplaskyjhe']
[2023-11-03T10:57:07.131+0000] {standard_task_runner.py:85} INFO - Job 33: Subtask get_films_data
[2023-11-03T10:57:07.349+0000] {task_command.py:415} INFO - Running <TaskInstance: movies-etl-dag.get_films_data manual__2023-11-03T10:57:00.555483+00:00 [running]> on host e468bf2dfd15
[2023-11-03T10:57:07.646+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='movies-etl-dag' AIRFLOW_CTX_TASK_ID='get_films_data' AIRFLOW_CTX_EXECUTION_DATE='2023-11-03T10:57:00.555483+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-03T10:57:00.555483+00:00'
[2023-11-03T10:57:07.754+0000] {base.py:73} INFO - Using connection ID 'movies_db_id' for task execution.
[2023-11-03T10:57:07.800+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/movie_pg_es.py", line 96, in get_films_data
    cursor.execute(query, (tuple(film_ids),))
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 14:         FROM {MOVIES_PG_DB_SCHEMA}.{MOVIES_PG_FILM_TABLE_NAM...
                      ^

[2023-11-03T10:57:07.851+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=movies-etl-dag, task_id=get_films_data, execution_date=20231103T105700, start_date=20231103T105707, end_date=20231103T105707
[2023-11-03T10:57:07.867+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 33 for task get_films_data (syntax error at or near "{"
LINE 14:         FROM {MOVIES_PG_DB_SCHEMA}.{MOVIES_PG_FILM_TABLE_NAM...
                      ^
; 464)
[2023-11-03T10:57:07.902+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-03T10:57:08.049+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
